Closed Bug 1772461 Opened 3 years ago Closed 3 years ago

Crash in [@ nsTreeSelection::TimedSelect]

Categories

(Core :: XUL, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
thunderbird_esr102 --- fixed
firefox-esr91 --- unaffected
firefox101 --- wontfix
firefox102 --- fixed
firefox103 --- fixed

People

(Reporter: wsmwk, Assigned: mkmelin)

Details

(Keywords: crash, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

This signature is all Mac crashes.

Crash report: https://crash-stats.mozilla.org/report/index/7a12b520-9298-42d9-92fd-f41340220520

Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS

Top 10 frames of crashing thread:

0 XUL nsTreeSelection::TimedSelect layout/xul/tree/nsTreeSelection.cpp:300
1 XUL NS_InvokeByIndex 
2 XUL XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1125
3 XUL XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:963
4 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:507
5 XUL Interpret js/src/vm/Interpreter.cpp:3314
6 XUL js::RunScript js/src/vm/Interpreter.cpp:389
7 XUL js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:539
8 XUL js::Call js/src/vm/Interpreter.cpp:605
9 XUL JS::Call js/src/vm/CallAndConstruct.cpp:117
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Pushed by mkmelin@iki.fi: https://hg.mozilla.org/integration/autoland/rev/78a319cd99dc Crash in [@ nsTreeSelection::TimedSelect]. r=NeilDeakin
Component: General → XUL
Product: Thunderbird → Core
Whiteboard: [tbird crash]
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch

The patch landed in nightly and beta is affected.
:mkmelin, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(mkmelin+mozilla)

Comment on attachment 9279831 [details]
Bug 1772461 - Crash in [@ nsTreeSelection::TimedSelect]. r=NeilDeakin

Beta/Release Uplift Approval Request

  • User impact if declined: May crash.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple null check, that would crash if it happend
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(mkmelin+mozilla)
Attachment #9279831 - Flags: approval-mozilla-beta?

Comment on attachment 9279831 [details]
Bug 1772461 - Crash in [@ nsTreeSelection::TimedSelect]. r=NeilDeakin

Approved for 102 beta 7, thanks.

Attachment #9279831 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: