Bug 1772461 - Crash in [@ nsTreeSelection::TimedSelect]. r=NeilDeakin a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D148372